# bulwark

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: publish.yml  security.yml  tests.yml
bulwark/: __init__.py  api.py  cli.py  exceptions.py
bulwark/config/: __init__.py  defaults.py
bulwark/core/: __init__.py  audit.py  detector.py  gates.py  rbac.py  sanitizer.py
bulwark/integrations/: __init__.py  _optional.py  anthropic.py  langchain.py  mcp.py  openai.py
bulwark/models/: __init__.py
bulwark/models/injection_classifier/: README.md
bulwark/utils/: __init__.py  crypto.py  patterns.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPLIANCE.md  QUICKSTART.md  README.md
examples/: attack_scenarios.py  dashboard.py  enterprise_config.py  mcp_integration.py  quickstart.py
huggingface/model/: PUBLISH.md  README.md
huggingface/space/: DEPLOY.md  README.md  app.py  requirements.txt
tests/: conftest.py  test_api.py  test_audit.py  test_cli.py  test_config_defaults.py  test_detector.py  test_extra_coverage.py  test_gates.py  test_integrations.py  test_rbac.py  test_sanitizer.py  test_utils.py
