[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bulwark-agent-security"
version = "0.2.0"
description = "Enterprise-grade defense framework for AI agents — protects against prompt injection, data exfiltration, and memory contamination."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Bulwark Contributors", email = "security@bulwark.dev" },
]
keywords = [
    "ai-security",
    "prompt-injection",
    "agent-security",
    "mcp",
    "llm-security",
    "guardrails",
    "hipaa",
    "soc2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5",
    "cryptography>=42.0",
    "httpx>=0.27",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.40",
    "torch>=2.2",
    "numpy>=1.26",
]
mcp = [
    "mcp>=0.9.0",
]
anthropic = [
    "anthropic>=0.34",
]
openai = [
    "openai>=1.30",
]
langchain = [
    "langchain-core>=0.2",
]
dashboard = [
    "streamlit>=1.32",
    "pandas>=2.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.3",
]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
all = [
    "bulwark-agent-security[ml,mcp,anthropic,openai,langchain]",
]

[project.urls]
Homepage = "https://github.com/anilatambharii/bulwark"
Documentation = "https://bulwark-security.github.io/bulwark"
Repository = "https://github.com/anilatambharii/bulwark"
Issues = "https://github.com/anilatambharii/bulwark/issues"
Changelog = "https://github.com/anilatambharii/bulwark/blob/main/CHANGELOG.md"
Security = "https://github.com/anilatambharii/bulwark/security/policy"

[project.scripts]
bulwark = "bulwark.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bulwark*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
bulwark = ["py.typed", "models/**/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (fine in tests)
    "S105",  # hardcoded password — false positives on key names
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N"]
"examples/**/*.py" = ["S"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["transformers.*", "torch.*", "jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--timeout=60",
]
markers = [
    "slow: marks tests as slow",
    "integration: integration tests requiring external services",
    "ml: tests requiring ML model dependencies",
]

[tool.coverage.run]
branch = true
source = ["bulwark"]
omit = [
    "bulwark/integrations/*",
    "bulwark/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 90
